<resources>
    <string name="app_name">My First Calculator</string>

    <string name="btn_one_text">1</string>
    <string name="btn_two_text">2</string>
    <string name="btn_three_text">3</string>
    <string name="btn_four_text">4</string>
    <string name="btn_five_text">5</string>
    <string name="btn_six_text">6</string>
    <string name="btn_seven_text">7</string>
    <string name="btn_eight_text">8</string>
    <string name="btn_nine_text">9</string>
    <string name="btn_zero_text">0</string>

    <string name="btn_addition_text">+</string>
    <string name="btn_subtraction_text">-</string>
    <string name="btn_multiplication">×</string>
    <string name="btn_division_text">/</string>
    <string name="btn_calculation_text">=</string>

    <string name="btn_decimal_point_text">.</string>
    <string name="btn_inverting_text">+/-</string>
    <string name="btn_percent_text">%</string>

    <string name="btn_delete_all_text">AC</string>
    <string name="btn_delete_text">⬅</string>
</resources>
